cluster/prometheus/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-route
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.nathanv.app`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
